// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Field/SelectField Basic 1`] = `
Array [
  <div
    className="psds-field__container"
    onClick={[Function]}
  >
    <label
      className="psds-field__label psds-theme--dark"
      htmlFor="downshift-0-toggle-button"
      id="downshift-0-label"
    >
      Choose an element
    </label>
    <div
      className="psds-halo psds-theme--light psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus psds-field__halo"
    >
      <div
        className="psds-field psds-field--medium psds-field--suffix"
      >
        <button
          aria-expanded={false}
          aria-haspopup="listbox"
          aria-labelledby="downshift-0-label downshift-0-toggle-button"
          id="downshift-0-toggle-button"
          onClick={[Function]}
          onKeyDown={[Function]}
          style={
            Object {
              "alignItems": "center",
              "all": "unset",
              "cursor": "pointer",
              "display": "flex",
              "flex": 1,
              "width": "100%",
            }
          }
        >
          <span>
            Do something
          </span>
          <div
            className="psds-field__suffix"
          >
            <div
              className="psds-icon psds-icon--size-medium"
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  d="m11.646 15.056-4.292-4.292a.5.5 0 0 1 0-.708l.703-.703a.5.5 0 0 1 .707 0L12 12.58l3.236-3.227a.5.5 0 0 1 .707 0l.703.703a.5.5 0 0 1 0 .708l-4.292 4.292a.5.5 0 0 1-.708 0z"
                />
              </svg>
            </div>
          </div>
        </button>
      </div>
    </div>
    <div
      className="psds-field__sub-label psds-theme--dark"
    >
      Area for additional information
    </div>
  </div>,
  <div
    style={
      Object {
        "border": "2px dashed pink",
        "display": "none",
        "height": 200,
        "margin": "20px 0",
        "overflow": "scroll",
        "padding": 20,
      }
    }
  >
    <ul
      aria-labelledby="downshift-0-label"
      id="downshift-0-menu"
      onBlur={[Function]}
      onKeyDown={[Function]}
      onMouseLeave={[Function]}
      role="listbox"
      tabIndex={-1}
    >
      <li
        aria-selected="false"
        id="downshift-0-item-0"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
        style={
          Object {
            "backgroundColor": "",
          }
        }
      >
        <span>
          Hydrogen
           
        </span>
      </li>
      <li
        aria-selected="false"
        id="downshift-0-item-1"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
        style={
          Object {
            "backgroundColor": "",
          }
        }
      >
        <span>
          Helium
           
        </span>
      </li>
      <li
        aria-selected="false"
        id="downshift-0-item-2"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
        style={
          Object {
            "backgroundColor": "",
          }
        }
      >
        <span>
          Lithium
           
        </span>
      </li>
      <li
        aria-selected="false"
        id="downshift-0-item-3"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
        style={
          Object {
            "backgroundColor": "",
          }
        }
      >
        <span>
          Beryllium
           
        </span>
      </li>
      <li
        aria-selected="false"
        id="downshift-0-item-4"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
        style={
          Object {
            "backgroundColor": "",
          }
        }
      >
        <span>
          Boron
           
        </span>
      </li>
      <li
        aria-selected="false"
        id="downshift-0-item-5"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
        style={
          Object {
            "backgroundColor": "",
          }
        }
      >
        <span>
          Carbon
           
        </span>
      </li>
      <li
        aria-selected="false"
        id="downshift-0-item-6"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
        style={
          Object {
            "backgroundColor": "",
          }
        }
      >
        <span>
          Nitrogren
           
        </span>
      </li>
      <li
        aria-selected="false"
        id="downshift-0-item-7"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
        style={
          Object {
            "backgroundColor": "",
          }
        }
      >
        <span>
          Oxygen
           
        </span>
      </li>
      <li
        aria-selected="false"
        id="downshift-0-item-8"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
        style={
          Object {
            "backgroundColor": "",
          }
        }
      >
        <span>
          Fluorine
           
        </span>
      </li>
      <li
        aria-selected="false"
        id="downshift-0-item-9"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
        style={
          Object {
            "backgroundColor": "",
          }
        }
      >
        <span>
          Neon
           
        </span>
      </li>
      <li
        aria-selected="false"
        id="downshift-0-item-10"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
        style={
          Object {
            "backgroundColor": "",
          }
        }
      >
        <span>
          Sodium
           
        </span>
      </li>
      <li
        aria-selected="false"
        id="downshift-0-item-11"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
        style={
          Object {
            "backgroundColor": "",
          }
        }
      >
        <span>
          Magnesium
           
        </span>
      </li>
      <li
        aria-selected="false"
        id="downshift-0-item-12"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
        style={
          Object {
            "backgroundColor": "",
          }
        }
      >
        <span>
          Aluminum
           
        </span>
      </li>
      <li
        aria-selected="false"
        id="downshift-0-item-13"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
        style={
          Object {
            "backgroundColor": "",
          }
        }
      >
        <span>
          Silicon
           
        </span>
      </li>
      <li
        aria-selected="false"
        id="downshift-0-item-14"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
        style={
          Object {
            "backgroundColor": "",
          }
        }
      >
        <span>
          Phosphorus
           
        </span>
      </li>
      <li
        aria-selected="false"
        id="downshift-0-item-15"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
        style={
          Object {
            "backgroundColor": "",
          }
        }
      >
        <span>
          Sulfur
           
        </span>
      </li>
      <li
        aria-selected="false"
        id="downshift-0-item-16"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
        style={
          Object {
            "backgroundColor": "",
          }
        }
      >
        <span>
          Chlorine
           
        </span>
      </li>
      <li
        aria-selected="false"
        id="downshift-0-item-17"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
        style={
          Object {
            "backgroundColor": "",
          }
        }
      >
        <span>
          Argon
           
        </span>
      </li>
      <li
        aria-selected="false"
        id="downshift-0-item-18"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
        style={
          Object {
            "backgroundColor": "",
          }
        }
      >
        <span>
          Potassium
           
        </span>
      </li>
      <li
        aria-selected="false"
        id="downshift-0-item-19"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
        style={
          Object {
            "backgroundColor": "",
          }
        }
      >
        <span>
          Calcium
           
        </span>
      </li>
      <li
        aria-selected="false"
        id="downshift-0-item-20"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
        style={
          Object {
            "backgroundColor": "",
          }
        }
      >
        <span>
          Scandium
           
        </span>
      </li>
      <li
        aria-selected="false"
        id="downshift-0-item-21"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
        style={
          Object {
            "backgroundColor": "",
          }
        }
      >
        <span>
          Titanium
           
        </span>
      </li>
      <li
        aria-selected="false"
        id="downshift-0-item-22"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
        style={
          Object {
            "backgroundColor": "",
          }
        }
      >
        <span>
          Vanadium
           
        </span>
      </li>
      <li
        aria-selected="false"
        id="downshift-0-item-23"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
        style={
          Object {
            "backgroundColor": "",
          }
        }
      >
        <span>
          Chromium
           
        </span>
      </li>
      <li
        aria-selected="false"
        id="downshift-0-item-24"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
        style={
          Object {
            "backgroundColor": "",
          }
        }
      >
        <span>
          Manganese
           
        </span>
      </li>
      <li
        aria-selected="false"
        id="downshift-0-item-25"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
        style={
          Object {
            "backgroundColor": "",
          }
        }
      >
        <span>
          Iron
           
        </span>
      </li>
      <li
        aria-selected="false"
        id="downshift-0-item-26"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
        style={
          Object {
            "backgroundColor": "",
          }
        }
      >
        <span>
          Cobalt
           
        </span>
      </li>
      <li
        aria-selected="false"
        id="downshift-0-item-27"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
        style={
          Object {
            "backgroundColor": "",
          }
        }
      >
        <span>
          Nickel
           
        </span>
      </li>
      <li
        aria-selected="false"
        id="downshift-0-item-28"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
        style={
          Object {
            "backgroundColor": "",
          }
        }
      >
        <span>
          Copper
           
        </span>
      </li>
      <li
        aria-selected="false"
        id="downshift-0-item-29"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
        style={
          Object {
            "backgroundColor": "",
          }
        }
      >
        <span>
          Zinc
           
        </span>
      </li>
      <li
        aria-selected="false"
        id="downshift-0-item-30"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
        style={
          Object {
            "backgroundColor": "",
          }
        }
      >
        <span>
          Gallium
           
        </span>
      </li>
      <li
        aria-selected="false"
        id="downshift-0-item-31"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
        style={
          Object {
            "backgroundColor": "",
          }
        }
      >
        <span>
          Germanium
           
        </span>
      </li>
      <li
        aria-selected="false"
        id="downshift-0-item-32"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
        style={
          Object {
            "backgroundColor": "",
          }
        }
      >
        <span>
          Arsenic
           
        </span>
      </li>
      <li
        aria-selected="false"
        id="downshift-0-item-33"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
        style={
          Object {
            "backgroundColor": "",
          }
        }
      >
        <span>
          Selenium
           
        </span>
      </li>
      <li
        aria-selected="false"
        id="downshift-0-item-34"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
        style={
          Object {
            "backgroundColor": "",
          }
        }
      >
        <span>
          Bromine
           
        </span>
      </li>
      <li
        aria-selected="false"
        id="downshift-0-item-35"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
        style={
          Object {
            "backgroundColor": "",
          }
        }
      >
        <span>
          Krypton
           
        </span>
      </li>
      <li
        aria-selected="false"
        id="downshift-0-item-36"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
        style={
          Object {
            "backgroundColor": "",
          }
        }
      >
        <span>
          Rubidium
           
        </span>
      </li>
      <li
        aria-selected="false"
        id="downshift-0-item-37"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
        style={
          Object {
            "backgroundColor": "",
          }
        }
      >
        <span>
          Strontium
           
        </span>
      </li>
      <li
        aria-selected="false"
        id="downshift-0-item-38"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
        style={
          Object {
            "backgroundColor": "",
          }
        }
      >
        <span>
          Yttrium
           
        </span>
      </li>
      <li
        aria-selected="false"
        id="downshift-0-item-39"
        onClick={[Function]}
        onMouseMove={[Function]}
        role="option"
        style={
          Object {
            "backgroundColor": "",
          }
        }
      >
        <span>
          Zirconium
           
        </span>
      </li>
    </ul>
  </div>,
]
`;

exports[`Storyshots Components/Field/TextAreaField Basic 1`] = `
<div
  className="psds-field__container"
  onClick={[Function]}
>
  <label
    className="psds-field__label psds-theme--dark"
    htmlFor="text-area__area-unique-id"
    id="text-area__label-unique-id"
  >
    Text area label area
  </label>
  <div
    className="psds-halo psds-theme--light psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus psds-field__halo"
  >
    <div
      className="psds-field psds-field--medium"
    >
      <div
        className="psds-field__text-area__container"
      >
        <textarea
          className="psds-field__text-area"
          id="text-area__area-unique-id"
          onChange={[Function]}
          value=""
        />
      </div>
    </div>
  </div>
  <div
    className="psds-field__sub-label psds-theme--dark"
  >
    Area for additional information
  </div>
</div>
`;

exports[`Storyshots Components/Field/TextAreaField Disabled 1`] = `
<div
  className="psds-field__container psds-field__container--disabled"
  onClick={[Function]}
>
  <label
    className="psds-field__label psds-theme--dark"
    htmlFor="text-area__area-unique-id"
    id="text-area__label-unique-id"
  >
    Text area label area
  </label>
  <div
    className="psds-halo psds-theme--light psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus psds-field__halo"
  >
    <div
      className="psds-field psds-field--medium"
    >
      <div
        className="psds-field__text-area__container"
      >
        <textarea
          className="psds-field__text-area psds-field__text-area--disabled"
          disabled={true}
          id="text-area__area-unique-id"
          onChange={[Function]}
          value=""
        />
      </div>
    </div>
  </div>
  <div
    className="psds-field__sub-label psds-theme--dark"
  >
    Area for additional information
  </div>
</div>
`;

exports[`Storyshots Components/Field/TextAreaField Error 1`] = `
<div
  className="psds-field__container psds-field__container--error"
  onClick={[Function]}
>
  <label
    className="psds-field__label psds-theme--dark"
    htmlFor="text-area__area-unique-id"
    id="text-area__label-unique-id"
  >
    Text area label area
  </label>
  <div
    className="psds-halo psds-theme--light psds-halo--shape-default psds-halo--gap-size-small psds-halo--error psds-halo--visible-on-focus psds-field__halo"
  >
    <div
      className="psds-field psds-field--medium"
    >
      <div
        className="psds-field__text-area__container"
      >
        <textarea
          className="psds-field__text-area"
          id="text-area__area-unique-id"
          onChange={[Function]}
          value=""
        />
      </div>
      <div
        className="psds-field__error-icon"
      >
        <div
          className="psds-icon psds-icon--size-medium"
        >
          <svg
            aria-label="exclamation point triangle icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              d="M11 10.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5zm.5 5.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5z"
            />
            <path
              clipRule="evenodd"
              d="M12.433 2.747a.5.5 0 0 0-.866 0L1.434 20.25a.5.5 0 0 0 .433.751h20.266a.5.5 0 0 0 .433-.75zM12 6l7.53 13H4.47z"
              fillRule="evenodd"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
  <div
    className="psds-field__sub-label psds-theme--dark"
  >
    Area for additional information
  </div>
</div>
`;

exports[`Storyshots Components/Field/TextAreaField With Placeholder 1`] = `
<div
  className="psds-field__container"
  onClick={[Function]}
>
  <label
    className="psds-field__label psds-theme--dark"
    htmlFor="text-area__area-unique-id"
    id="text-area__label-unique-id"
  >
    Text area label area
  </label>
  <div
    className="psds-halo psds-theme--light psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus psds-field__halo"
  >
    <div
      className="psds-field psds-field--medium"
    >
      <div
        className="psds-field__text-area__container"
      >
        <textarea
          className="psds-field__text-area"
          id="text-area__area-unique-id"
          onChange={[Function]}
          placeholder="Enter some text here"
          value=""
        />
      </div>
    </div>
  </div>
  <div
    className="psds-field__sub-label psds-theme--dark"
  >
    Area for additional information
  </div>
</div>
`;

exports[`Storyshots Components/Field/TextInputField Basic 1`] = `
<div
  style={
    Object {
      "maxWidth": "400px",
    }
  }
>
  <div
    className="psds-field__container"
    onClick={[Function]}
  >
    <label
      className="psds-field__label psds-theme--dark"
      htmlFor="text-input__input-unique-id"
      id="text-input__label-unique-id"
    >
      Text input label area
    </label>
    <div
      className="psds-halo psds-theme--light psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus psds-field__halo"
    >
      <div
        className="psds-field psds-field--medium"
      >
        <div
          className="psds-field__input__container"
        >
          <input
            className="psds-field__input psds-field__input--medium"
            id="text-input__input-unique-id"
            type="text"
          />
        </div>
      </div>
    </div>
    <div
      className="psds-field__sub-label psds-theme--dark"
    >
      Area for additional information
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Field/TextInputField Custom Input Tag 1`] = `
<div
  style={
    Object {
      "maxWidth": "400px",
    }
  }
>
  <div
    className="psds-field__container"
    onClick={[Function]}
  >
    <label
      className="psds-field__label psds-theme--dark"
      htmlFor="text-input__input-unique-id"
      id="text-input__label-unique-id"
    >
      Text input label area
    </label>
    <div
      className="psds-halo psds-theme--light psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus psds-field__halo"
    >
      <div
        className="psds-field psds-field--medium"
      >
        <div
          className="psds-field__input__container"
        >
          <input
            className="psds-field__input psds-field__input--medium"
            id="text-input__input-unique-id"
            placeholder="tag from render prop"
            style={
              Object {
                "outline": "1px dashed pink",
              }
            }
            type="text"
          />
        </div>
      </div>
    </div>
    <div
      className="psds-field__sub-label psds-theme--dark"
    >
      Area for additional information
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Field/TextInputField Disabled 1`] = `
<div
  style={
    Object {
      "maxWidth": "400px",
    }
  }
>
  <div
    className="psds-field__container psds-field__container--disabled"
    onClick={[Function]}
  >
    <label
      className="psds-field__label psds-theme--dark"
      htmlFor="text-input__input-unique-id"
      id="text-input__label-unique-id"
    >
      Text input label area
    </label>
    <div
      className="psds-halo psds-theme--light psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus psds-field__halo"
    >
      <div
        className="psds-field psds-field--medium"
      >
        <div
          className="psds-field__input__container"
        >
          <input
            className="psds-field__input psds-field__input--medium"
            disabled={true}
            id="text-input__input-unique-id"
            type="text"
          />
        </div>
      </div>
    </div>
    <div
      className="psds-field__sub-label psds-theme--dark"
    >
      Area for additional information
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Field/TextInputField Error 1`] = `
<div
  style={
    Object {
      "maxWidth": "400px",
    }
  }
>
  <div
    className="psds-field__container psds-field__container--error"
    onClick={[Function]}
  >
    <label
      className="psds-field__label psds-theme--dark"
      htmlFor="text-input__input-unique-id"
      id="text-input__label-unique-id"
    >
      Text input label area
    </label>
    <div
      className="psds-halo psds-theme--light psds-halo--shape-default psds-halo--gap-size-small psds-halo--error psds-halo--visible-on-focus psds-field__halo"
    >
      <div
        className="psds-field psds-field--medium"
      >
        <div
          className="psds-field__input__container"
        >
          <input
            className="psds-field__input psds-field__input--medium"
            id="text-input__input-unique-id"
            type="text"
          />
        </div>
        <div
          className="psds-field__error-icon"
        >
          <div
            className="psds-icon psds-icon--size-medium"
          >
            <svg
              aria-label="exclamation point triangle icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M11 10.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5zm.5 5.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5z"
              />
              <path
                clipRule="evenodd"
                d="M12.433 2.747a.5.5 0 0 0-.866 0L1.434 20.25a.5.5 0 0 0 .433.751h20.266a.5.5 0 0 0 .433-.75zM12 6l7.53 13H4.47z"
                fillRule="evenodd"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      className="psds-field__sub-label psds-theme--dark"
    >
      Area for additional information
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Field/TextInputField Icon Prefix 1`] = `
<div
  style={
    Object {
      "maxWidth": "400px",
    }
  }
>
  <div
    className="psds-field__container"
    onClick={[Function]}
  >
    <label
      className="psds-field__label psds-theme--dark"
      htmlFor="text-input__input-unique-id"
      id="text-input__label-unique-id"
    >
      Text input label area
    </label>
    <div
      className="psds-halo psds-theme--light psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus psds-field__halo"
    >
      <div
        className="psds-field psds-field--medium psds-field--prefix"
      >
        <div
          className="psds-field__prefix"
        >
          <div
            className="psds-icon psds-icon--size-medium"
          >
            <svg
              aria-label="placeholder icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M14 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0zM8 3H4a1 1 0 0 0-1 1v4h2V5h3V3zm2 2V3h4v2h-4zm9 3V5h-3V3h4a1 1 0 0 1 1 1v4h-2zm0 6v-4h2v4h-2zm-3 5h3v-3h2v4a1 1 0 0 1-1 1h-4v-2zm-6 0h4v2h-4v-2zm-5-3v3h3v2H4a1 1 0 0 1-1-1v-4h2zm0-6v4H3v-4h2z"
                fillOpacity=".95"
              />
            </svg>
          </div>
        </div>
        <div
          className="psds-field__input__container"
        >
          <input
            className="psds-field__input psds-field__input--medium"
            id="text-input__input-unique-id"
            type="text"
          />
        </div>
      </div>
    </div>
    <div
      className="psds-field__sub-label psds-theme--dark"
    >
      Area for additional information
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Field/TextInputField Icon Suffix 1`] = `
<div
  style={
    Object {
      "maxWidth": "400px",
    }
  }
>
  <div
    className="psds-field__container"
    onClick={[Function]}
  >
    <label
      className="psds-field__label psds-theme--dark"
      htmlFor="text-input__input-unique-id"
      id="text-input__label-unique-id"
    >
      Text input label area
    </label>
    <div
      className="psds-halo psds-theme--light psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus psds-field__halo"
    >
      <div
        className="psds-field psds-field--medium psds-field--suffix"
      >
        <div
          className="psds-field__input__container"
        >
          <input
            className="psds-field__input psds-field__input--medium"
            id="text-input__input-unique-id"
            type="text"
          />
        </div>
        <div
          className="psds-field__suffix"
        >
          <div
            className="psds-icon psds-icon--size-medium"
          >
            <svg
              aria-label="placeholder icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M14 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0zM8 3H4a1 1 0 0 0-1 1v4h2V5h3V3zm2 2V3h4v2h-4zm9 3V5h-3V3h4a1 1 0 0 1 1 1v4h-2zm0 6v-4h2v4h-2zm-3 5h3v-3h2v4a1 1 0 0 1-1 1h-4v-2zm-6 0h4v2h-4v-2zm-5-3v3h3v2H4a1 1 0 0 1-1-1v-4h2zm0-6v4H3v-4h2z"
                fillOpacity=".95"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      className="psds-field__sub-label psds-theme--dark"
    >
      Area for additional information
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Field/TextInputField Password Type 1`] = `
<div
  style={
    Object {
      "maxWidth": "400px",
    }
  }
>
  <div
    className="psds-field__container"
    onClick={[Function]}
  >
    <label
      className="psds-field__label psds-theme--dark"
      htmlFor="text-input__input-unique-id"
      id="text-input__label-unique-id"
    >
      Text input label area
    </label>
    <div
      className="psds-halo psds-theme--light psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus psds-field__halo"
    >
      <div
        className="psds-field psds-field--medium psds-field--suffix"
      >
        <div
          className="psds-field__input__container"
        >
          <input
            className="psds-field__input psds-field__input--medium"
            id="text-input__input-unique-id"
            type="password"
          />
        </div>
        <div
          className="psds-field__suffix"
        >
          <div
            className="psds-icon psds-icon--size-medium"
          >
            <svg
              aria-label="lock icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 17a1.5 1.5 0 1 0-.001-3A1.5 1.5 0 0 0 12 17z"
              />
              <path
                clipRule="evenodd"
                d="M17 10V8c0-2.756-2.243-5-5-5S7 5.244 7 8v2H6a1 1 0 0 0-1 1v9a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-9a1 1 0 0 0-1-1zM7 12v7h10.001L17 12zm2-4c0-1.654 1.346-3 3-3s3 1.346 3 3v2H9z"
                fillRule="evenodd"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      className="psds-field__sub-label psds-theme--dark"
    >
      Area for additional information
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Field/TextInputField Size Small 1`] = `
<div
  style={
    Object {
      "maxWidth": "400px",
    }
  }
>
  <div
    className="psds-field__container"
    onClick={[Function]}
  >
    <label
      className="psds-field__label psds-theme--dark"
      htmlFor="text-input__input-unique-id"
      id="text-input__label-unique-id"
    >
      Text input label area
    </label>
    <div
      className="psds-halo psds-theme--light psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus psds-field__halo"
    >
      <div
        className="psds-field psds-field--small"
      >
        <div
          className="psds-field__input__container"
        >
          <input
            className="psds-field__input psds-field__input--small"
            id="text-input__input-unique-id"
            type="text"
          />
        </div>
      </div>
    </div>
    <div
      className="psds-field__sub-label psds-theme--dark"
    >
      Area for additional information
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Field/TextInputField Style Override Display Block 1`] = `
<div
  style={
    Object {
      "maxWidth": "400px",
    }
  }
>
  <div
    style={
      Object {
        "outline": "2px dashed #E7558B",
      }
    }
  >
    <div
      style={
        Object {
          "width": "400px",
        }
      }
    >
      <div
        className="psds-field__container"
        onClick={[Function]}
        style={
          Object {
            "display": "block",
          }
        }
      >
        <label
          className="psds-field__label psds-theme--dark"
          htmlFor="text-input__input-unique-id"
          id="text-input__label-unique-id"
        >
          Text input label area
        </label>
        <div
          className="psds-halo psds-theme--light psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus psds-field__halo"
        >
          <div
            className="psds-field psds-field--medium"
          >
            <div
              className="psds-field__input__container"
            >
              <input
                className="psds-field__input psds-field__input--medium"
                id="text-input__input-unique-id"
                type="text"
              />
            </div>
          </div>
        </div>
        <div
          className="psds-field__sub-label psds-theme--dark"
        >
          Area for additional information
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Field/TextInputField With Placeholder 1`] = `
<div
  style={
    Object {
      "maxWidth": "400px",
    }
  }
>
  <div
    className="psds-field__container"
    onClick={[Function]}
  >
    <label
      className="psds-field__label psds-theme--dark"
      htmlFor="text-input__input-unique-id"
      id="text-input__label-unique-id"
    >
      Text input label area
    </label>
    <div
      className="psds-halo psds-theme--light psds-halo--shape-default psds-halo--gap-size-small psds-halo--visible-on-focus psds-field__halo"
    >
      <div
        className="psds-field psds-field--medium"
      >
        <div
          className="psds-field__input__container"
        >
          <input
            className="psds-field__input psds-field__input--medium"
            id="text-input__input-unique-id"
            placeholder="Enter some text here"
            type="text"
          />
        </div>
      </div>
    </div>
    <div
      className="psds-field__sub-label psds-theme--dark"
    >
      Area for additional information
    </div>
  </div>
</div>
`;
